Reimplementated the GDSArray in handling gds connection
- added "acquireGDS" and "releaseGDS" to handle the opened gds files as environment variable for efficiency
- Removed "gds" slot from "GDSArraySeed", a filename would work.
- This should fix the error on devel.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,18 @@
 S3method(.DollarNames,GDSFile)
 export(GDSArray)
 export(GDSFile)
+export(acquireGDS)
 export(gdsExampleFileName)
+export(releaseGDS)
 exportClasses(GDSArray)
 exportClasses(GDSFile)
 exportClasses(GDSMatrix)
 exportMethods("$")
-exportMethods("gdsfile<-")
+exportMethods("gdsfn<-")
 exportMethods("seed<-")
 exportMethods(coerce)
 exportMethods(extract_array)
-exportMethods(gdsfile)
+exportMethods(gdsfn)
 exportMethods(gdsnodes)
 exportMethods(seed)
 import(BiocGenerics)
