reverse method name of gdsfn back to gdsfile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,11 @@ exportClasses(GDSArray)
 exportClasses(GDSFile)
 exportClasses(GDSMatrix)
 exportMethods("$")
-exportMethods("gdsfn<-")
+exportMethods("gdsfile<-")
 exportMethods("seed<-")
 exportMethods(coerce)
 exportMethods(extract_array)
-exportMethods(gdsfn)
+exportMethods(gdsfile)
 exportMethods(gdsnodes)
 exportMethods(seed)
 import(BiocGenerics)
